--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=SHAREPLUS;user=root;password=;"
+    "DefaultConnection": "server=localhost;database=SHAREPLUS1;user=root;password=;"
   },
 
   
